# facial-feature-detection

./: README.md  eyebrow.cpp
eyebrow/: CMakeLists.txt  eyebrow.cpp
eyebrow/bgr2hsi/: CMakeLists.txt  README.md  bgr2hsi.cpp  bgr2hsi.h
eyebrow/histogram/: CMakeLists.txt  README.md  histogram.cpp  histogram.h
eyebrow/roi/: CMakeLists.txt  README.md  eyebrow_roi.cpp  eyebrow_roi.h
mouth/: CMakeLists.txt  mouth.cpp
